2007-02-16  Soren Sandmann <sandmann@redhat.com>

	* tests/sequence-test.c: For move, test moving between two
	sequences. Add test for swap.

	* glib/gsequence.c: Replace splay tree with a treap.
	(check_node): Add checks for the treap invariants.

2007-02-10  Hans Breuer  <hans@breuer.org>

	* glib/makefile.msc.in : added gsequence.obj

Fri Feb  9 17:46:18 2007  Søren Sandmann  <sandmann@redhat.com>

	* glib/gsequence.c (g_sequence_get_end_iter): Remove assertion.
	* glib/gsequence.c (is_end): Return TRUE if the iter doesn't have
	a parent.
	* glib/gsequence.c: Fix grammar of comment. 
	* glib/gsequence.c (node_update_fields): Use a temporary variable
	for the n_nodes.

2007-02-07  Soren Sandmann <sandmann@daimi.au.dk>

	* tests/sequence-test.c (compare_items): Force an arbitrary order
	on otherwise identical items. 

	* glib/gsequence.c: Add comment discussing splay trees vs. other trees. 
	* glib/gsequence.c (is_end): Add fast path for the common case
	when the node is not actually the end node.

2007-02-05  Soren Sandmann <sandmann@daimi.au.dk>

	* glib/gsequence.c (g_sequence_sort_iter): Don't prohibit access
	until after the g_sequence_move_range() call.  Bug 404759,
	Christian Persch.

       * tests/sequence-test.c: Formatting fix.

2007-02-03  Soren Sandmann <sandmann@daimi.au.dk>

	* glib/gsequence.c (struct _GSequence): Add a new 'real_sequence'
	field.
	(g_sequence_new): Initialize real_sequence to the sequence
	(g_sequence_sort_iter): Set real_sequence of the temporary
	sequence to the real sequence.
	(g_sequence_sort_changed_iter): Same
	(g_sequence_insert_sorted_iter): Same
	(g_sequence_search_iter): Same
	(g_sequence_iter_get_sequence): Return real_sequence

	* tests/sequence-test.c (compare_iters): Insert assertions that
	the iters point to the sequence being manipulated.

2007-02-03  Soren Sandmann <sandmann@daimi.au.dk>

	* glib/gsequence.[ch]: New files implementing GSequence, a list
	implemented using a binary tree.